# flashdark

./: .gitignore  .justfile  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: flow.yml
blender/: export.py  roomMVP.blend  roomMVP.blend1
blender/Output/RoomMVP/: room.mtl  roomMVP.mtl
blender/PSD/: FuseboxPSD.psd  KeysPSD.psd  SofaPSD.psd  SwingPSD.psd  TVPSD.psd  WindowsPSD.psd
src/: assets.rs  camera.rs  draw.rs  id.rs  loading_screen.rs  logic.rs  main.rs  obj.rs  particles.rs  util.rs
src/assets/: config.rs  mod.rs  obj.rs
src/assets/level/: load.rs  mod.rs
src/draw/: helpers.rs  mod.rs
src/logic/: camera.rs  flashdark.rs  interactables.rs  items.rs  light.rs  mod.rs  monster.rs  movement.rs  navmesh.rs  player.rs
src/util/: mod.rs  rng.rs  spatial_map.rs
static/: config.json  index.html
static/assets/: config.json  navmesh.json  table.mtl  tri.mtl
static/assets/difficulty/: 1.json  2.json  3.json
static/assets/level/: roomMVP.mtl
static/assets/shaders/: billboard.glsl  camera_shadow_map.glsl  horizontal_sprite.glsl  obj.glsl  particle.glsl  shadow.glsl  shine.glsl  skybox.glsl  sprite.glsl  vertical_sprite.glsl
static/level/: roomMVP.mtl
static/shaders/: billboard.glsl  obj.glsl  wall.glsl
