[package]
name = "flashdark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geng = { git = "https://github.com/kuviman/geng" }
serde = "1"
noise = "0.7"

[build-dependencies]
cmake = "<=0.1.45" # https://github.com/PistonDevelopers/freetype-sys/issues/99